--- a/MovieDB/styles.css
+++ b/MovieDB/styles.css
@@ -1,6 +1,5 @@
 html,body{
     text-align:center;
-    /* background-color: lightblue; */
     height:100%;
 }
 
@@ -16,7 +15,6 @@ html,body{
     left:0px;
     right:0px;
     text-align:center;
-    /* background-color: lawngreen; */
     margin:0 auto;
     padding:0;
     width:100%;
@@ -25,19 +23,51 @@ html,body{
     /* overflow:hidden; */
 }
 #myTable{
-    /* background-color: lemonchiffon; */
     border-collapse:collapse;
     width:100%;
     font-size:18px;
 }
 
-#myTable th,#myTable td{
+#myTable thead,#myTable td{
 text-align:left;
 padding:12px;
 }
 #myTable tr{
     border-bottom:1px solid #ddd;
 }
-#myTable tr.header, #myTable tr:hover{
+/* #myTable tr.header, #myTable tr:hover{
     background-color: lightblue;
+} */
+.tableData{
+    position:relative;
+}
+.content-table{
+    position:absolute;
+    left:25%;
+    border-collapse:collapse;
+    margin:25px 0;
+    font-size:0.9em;
+    min-width:400px;
+    border-radius:5px 5px 0 0;
+    overflow:hidden;
+    box-shadow:0 0 20px rgba(0,0,0,0.15)
+}
+.content-table  tr.header{
+    background-color:#009879;
+    color:white;
+    text-align:left;
+    font-weight:bold;
+}
+.content-table th,
+.content-table td{
+    padding:12px 15px;
+}
+.content-table tbody tr{
+    border-bottom:1px solid #dddddd;
+}
+.content-table tbody tr:nth-of-type(even){
+    background-color:#f3f3f3;
+}
+.content-table tbody tr:last-of-type{
+    border-bottom:2px solid #009879; 
 }
