--- a/MovieDB/styles.css
+++ b/MovieDB/styles.css
@@ -39,13 +39,12 @@ padding:12px;
     background-color: lightblue;
 } */
 .tableData{
-    position:relative;
+    /* position:relative; */
 }
 .content-table{
-    position:absolute;
-    left:25%;
+    width:50%;
+    margin:auto;
     border-collapse:collapse;
-    margin:25px 0;
     font-size:0.9em;
     min-width:400px;
     border-radius:5px 5px 0 0;
